Bug 1395898 - Awesome Screenshot webextension does not work. r=jimm, a=lizzard

Fix ExtensionProtocolHandler::GetAsync() to handle failures returned
from AsyncOpen2() for cached JAR resources.

Don't call SetupEventTarget() in the cached JAR ExtensionStreamGetter
constructor because the event target is not needed and calling
SetupEventTarget() triggers a debug mode warning from
nsContentUtils::GetEventTargetByLoadInfo().

MozReview-Commit-ID: KjDsPNQWlwU