netwerk/protocol/res/ExtensionProtocolHandler.cpp
@@ -146,7 +146,8 @@ class ExtensionStreamGetter : public RefCounted<ExtensionStreamGetter>
     // because we don't need to ask the parent for an FD for the JAR, but
     // wrapping the JARChannel in a SimpleChannel allows HTTP forwarding to
     // moz-extension URI's to work because HTTP forwarding requires the
-    // target channel implement nsIChildChannel.
+    // target channel implement nsIChildChannel. mMainThreadEventTarget is
+    // not used for this case, so don't set it up.
     explicit
       ExtensionStreamGetter(already_AddRefed<nsIJARChannel>&& aJarChannel)
       : mJarChannel(Move(aJarChannel))
@@ -154,8 +155,6 @@ class ExtensionStreamGetter : public RefCounted<ExtensionStreamGetter>
       , mIsCachedJar(true)
     {
       MOZ_ASSERT(mJarChannel);
-
-      SetupEventTarget();
     }
 
     ~ExtensionStreamGetter() {}
@@ -269,7 +268,7 @@ ExtensionStreamGetter::GetAsync(nsIStreamListener* aListener,
                                 nsIChannel* aChannel)
 {
   MOZ_ASSERT(IsNeckoChild());
-  MOZ_ASSERT(mMainThreadEventTarget);
+  MOZ_ASSERT(mMainThreadEventTarget || mIsCachedJar);
 
   mListener = aListener;
   mChannel = aChannel;
@@ -278,7 +277,11 @@ ExtensionStreamGetter::GetAsync(nsIStreamListener* aListener,
   // parent if the JAR is cached
   if (mIsCachedJar) {
     MOZ_ASSERT(mIsJarChannel);
-    mJarChannel->AsyncOpen2(mListener);
+    nsresult rv = mJarChannel->AsyncOpen2(mListener);
+    if (NS_FAILED(rv)) {
+      mChannel->Cancel(NS_BINDING_ABORTED);
+      return Result<Ok, nsresult>(rv);
+    }
     return Ok();
   }
 
